@@ -1,3 +1,8 @@
+version <unreleased>
+
+Extractors
++ [facebook] Recognize .onion URLs (#11443)
+
 version 2016.12.12
 
 Core
